proj1/tests/other-tests/minz-tests/error/fn_not_closed.py
def f(a, b, c
    return a